[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/ARCADEPI.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Materials/theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/GameOverScreen/game_over_screen.gd" type="Script" id=3]
[ext_resource path="res://Objects/UI/button.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -71.0
margin_top = 50.0
margin_right = 71.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Scores" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -20.0
margin_bottom = -10.0
custom_constants/separation = 8
alignment = 1

[node name="Score" type="Label" parent="Scores"]
margin_left = 46.0
margin_right = 112.0
margin_bottom = 10.0
size_flags_horizontal = 4
text = "SCORE: 50"
align = 1
valign = 1
uppercase = true

[node name="HighScore" type="Label" parent="Scores"]
margin_left = 120.0
margin_right = 216.0
margin_bottom = 10.0
size_flags_horizontal = 4
text = "HIGH SCORE: 0"
valign = 1
uppercase = true

[node name="Difficulty" type="Label" parent="Scores"]
margin_left = 224.0
margin_right = 273.0
margin_bottom = 10.0
text = "DIFF: H"
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_right = 41.0
margin_bottom = 20.0
custom_constants/separation = 1

[node name="Restart" type="Button" parent="Buttons"]
margin_right = 82.0
margin_bottom = 14.0
text = "RESTART"
script = ExtResource( 4 )

[node name="MainMenu" type="Button" parent="Buttons"]
margin_top = 15.0
margin_right = 82.0
margin_bottom = 29.0
text = "MAIN MENU"
script = ExtResource( 4 )

[connection signal="pressed" from="Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
